--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
     <title>牧月我的世界服务器</title>
   </head>
   <body>
-  <h1></h1>
-    <img src="images/111.jpg" alt="早期劳大照片" />
-    <button>切换用户</button>
+  <h1>牧月我的世界服务器</h1>
+    <img src="images/111.jpg" alt="服务器" />
     <script src="scripts/mian.js" defer></script>
   </body>
 </html>
-<p class="nb">易江天花板</p>
+<p class="nb"></p>
 
 
 
-<p>更多牢大</p>
 
+<a href="https://www.yuanshen.com/#/"><button>宣传视频</button></a>
+<p>服务器照片</p>
 <ul>
-  <li><img src="images/123.jpg" alt="我没意见" />
+  <li><img src="images/123.jpg" alt="暂无" />
   
-  <li><img src="images/111.gif" alt="火"/>
+  <li><img src="images/111.gif" alt="暂无"/>
 
 </ul>
 
-<a href="https://www.yuanshen.com/#/">原神启动</a>
+<a href="https://www.yuanshen.com/#/"><button>加入我们</button></a>
  
