--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 
-<a href="https://www.yuanshen.com/#/"><button>宣传视频</button></a>
+<a href="https://www.bilibili.com/video/BV1CC4y1577S/?spm_id_from=333.337.search-card.all.click"><button>宣传视频</button></a>
 <p>服务器照片</p>
 <ul>
   <li><img src="images/123.jpg" alt="暂无" />
