--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="styles/style.css" rel="stylesheet" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>牧月我的世界服务器</title>
+    <title>114514</title>
   </head>
   <body>
   <h1>牧月我的世界服务器</h1>
@@ -27,4 +27,7 @@
 </ul>
 
 <a href="https://www.yuanshen.com/#/"><button>加入我们</button></a>
- 
+
+<a target="_blank" href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=FyUmJSQvJCYmJCJXZmY5dHh6" style="text-decoration:none;"><br>
+  
+<img src="http://rescdn.qqmail.com/zh_CN/htmledition/images/function/qm_open/ico_mailme_12.png"/></a>
