--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="styles/style.css" rel="stylesheet" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>114514</title>
+    <title>牧月我的世界服务器</title>
   </head>
   <body>
   <h1>牧月我的世界服务器</h1>
