--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 </ul>
 
-<a href="https://www.yuanshen.com/#/"><button>加入我们</button></a>
+<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=pElkfE3nI7zpPcKGbjFTvneuegvWeiPc&authKey=hfdakg4rlxz3zPS7KtSKs7QFDV1uGD5LZP%2BFrKljWrD3TDKzdgmrP5LvGzX5b5yZ&noverify=0&group_code=518502082"><button>加入我们</button></a>
 
 <a target="_blank" href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=FyUmJSQvJCYmJCJXZmY5dHh6" style="text-decoration:none;"><br>
   
