--- a/index.html
+++ b/index.html
@@ -28,6 +28,4 @@
 
 <a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=pElkfE3nI7zpPcKGbjFTvneuegvWeiPc&authKey=hfdakg4rlxz3zPS7KtSKs7QFDV1uGD5LZP%2BFrKljWrD3TDKzdgmrP5LvGzX5b5yZ&noverify=0&group_code=518502082"><button>加入我们</button></a>
 
-<a target="_blank" href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=FyUmJSQvJCYmJCJXZmY5dHh6" style="text-decoration:none;"><br>
-  
-<img src="http://rescdn.qqmail.com/zh_CN/htmledition/images/function/qm_open/ico_mailme_12.png"/></a>
+<a target="_blank" href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=FyUmJSQvJCYmJCJXZmY5dHh6" style="text-decoration:none;"><img src="http://rescdn.qqmail.com/zh_CN/htmledition/images/function/qm_open/ico_mailme_11.png"/></a>
