--- a/index.html
+++ b/index.html
@@ -4,26 +4,21 @@
     <link href="styles/style.css" rel="stylesheet" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>114514</title>
+    <title>牧月我的世界服务器</title>
   </head>
   <body>
-  <h1></h1>
-    <img src="images/1122.jpg" alt="服务器" />
+  <h1>牧月我的世界服务器</h1>
+    <img src="images/111.jpg" alt="服务器" />
     <script src="scripts/mian.js" defer></script>
   </body>
 </html>
 <p class="nb"></p>
-<div class="wrapper">
-  <div class="box a"></div>
-  <div class="box b"></div>
-</div>
 
 
 
-<div class="video-frame">
-  <a href="https://www.yuanshen.com/" img src="images/112.gif" alt=""><button>宣传视频</button></a> 
-</div>
-<p></p>
+
+<a href="https://www.bilibili.com/video/BV1CC4y1577S/?spm_id_from=333.337.search-card.all.click"><button>宣传视频</button></a>
+<p>服务器照片</p>
 <ul>
   <li><img src="images/123.jpg" alt="暂无" />
   
@@ -31,15 +26,6 @@
 
 </ul>
 
-<a href="https://www.yuanshen.com/#/"><button></button></a>
+<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=pElkfE3nI7zpPcKGbjFTvneuegvWeiPc&authKey=hfdakg4rlxz3zPS7KtSKs7QFDV1uGD5LZP%2BFrKljWrD3TDKzdgmrP5LvGzX5b5yZ&noverify=0&group_code=518502082"><button>加入我们</button></a>
 
-<a  href="http://mailto.2123831135@qq.com" style="text-decoration:none;"><br>
-  
-<img src="http://rescdn.qqmail.com/zh_CN/htmledition/images/function/qm_open/ico_mailme_12.png"/></a>
-<div></div>
-
-    <textarea></textarea>
-    <button></button>
-    <ul></ul>
-    <script>
-    
+<a target="_blank" href="http://mail.2123831135@qq.com/cgi-bin/qm_share?t=qm_mailme&email=FyUmJSQvJCYmJCJXZmY5dHh6" style="text-decoration:none;"><img src="http://rescdn.qqmail.com/zh_CN/htmledition/images/function/qm_open/ico_mailme_12.png"/></a>
